Bug fixes, Refactoring, New features - Creata la pagina settings - Refactoring del codice (con commenti TODO da rivedere) - Corretto i bug del salvare coordinate e foto per i quali cambiando activity sparivano - Corretto bug per il quale cancellare la foto non la cancellava dalla memoria del dispositivo - Creata la funzione clear per la posizione - Creata la funzione clear per automatic saving
!!!! Bug da risolvere:
1) Ogni volta che installo app per la prima volta, e quindi non ha i permessi al gps, crasha ancora prima che possa chiederti i permessi
2) Quando usi la camera per fare una foto non deve chiederti se vuoi scattarla con l'app stessa ma deve usare di default la camera

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">SmartPark</string>
+    <string name="app_description">This app is developed by Roberto Di Via and Edoardo Vernazza for a UNIGE project</string>
 </resources>
