--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,10 @@
 <resources>
     <string name="app_name">SmartPark</string>
-    <string name="app_description">This app is developed by Roberto Di Via and Edoardo Vernazza for a UNIGE project</string>
+    <string name="app_description">This app is developed\nby\nRoberto Di Via\nfor a\nUNIGE project</string>
     <string name="automatic_saving_description">
-        Here you can activate automatic savings for your parks.
-        You can choose:<br/><br/>
-        1- If you switch "Automatic savings" it will start saving your position automatically<br/>
-        2- If you switch "Bluetooth" and "Automatic savings" your position saved will be more accurate<br/></string>
+        Activate automatic savings for your parks:\n\n
+        1- "Automatic savings" for regular saving\n
+        2- "Automatic savings" + "Bluetooth" to a more accurate saving\n\n
+        (Note: Mode 1 is not implemented yet)
+</string>
 </resources>
